<resources>
    <string name="default_web_client_id">858097682478-lvkhf614h5o625bl41h4kl16ep5iqh3r.apps.googleusercontent.com</string>

    <!-- Texts -->
    <string name="description">This is a WIP</string>
    <string name="gmailLogin">Enter your Gmail here</string>
    <string name="pwdLogin">Enter your password here</string>
    <string name="gmail">Gmail: </string>
    <string name="pwd">Password: </string>
    <string name="login">Log in</string>
    <string name="githubLogin">Use GitHub</string>
    <string name="confPwd">Confirm Password:</string>
    <string name="conf">Enter your password again</string>
    <string name="welcome">Welcome to Quizzical!</string>
    <string name="data">Data</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="accessibility">Accessibility</string>
    <string name="textSize">Text Size</string>
    <string name="putCode">Introduce the game code</string>
    <string name="enterCode">Enter code</string>
    <string name="chooseDiff">Choose a difficult</string>
    <string name="enterPort">Enter a code</string>
    <string name="portRange">(5000 – 6000)</string>

    <!-- Buttons -->
    <string name="loginButton">Log in</string>
    <string name="settingsButton">Settings</string>
    <string name="hostButton">Host</string>
    <string name="statsButton">Statistics</string>
    <string name="signup">Sign up</string>
    <string name="playButton">Start Playing</string>
    <string name="profileButton">Profile</string>
    <string name="clearData">Clear Data</string>
    <string name="checkData">Check Stored Data</string>
    <string name="Continue">Continue</string>
    <string name="hostGame">Host game</string>
    <string name="joinGame">Join game</string>
    <string name="cancel">Cancel</string>
    <string name="easyButton">Easy</string>
    <string name="mediumButton">Medium</string>
    <string name="hardButton">Hard</string>
    <string name="startButton">Start Game</string>

    <!-- RadioButtons -->
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="system">System</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="extraLarge">Extra Large</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>

    <!-- Titles -->
    <string name="app_name">Quizzical</string>
    <string name="loginTitle">Log into Quizzical</string>

    <!-- Toasts -->
    <string name="enterCodeToast">Please enter a game code.</string>
    <string name="connectedToast">Connected to game!</string>
    <string name="connectFailedToast">Failed to connect to game.</string>
    <string name="host">You are the host!</string>
    <string name="chooseDif">Please select a difficulty level.</string>
    <string name="uTurn">Your turn!</string>
    <string name="win">You Won!</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>


</resources>