<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/left_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/dataLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"/>

    <Button
        android:id="@+id/clearData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearData"
        app:layout_constraintTop_toBottomOf="@id/dataLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="25dp" />

    <Button
        android:id="@+id/checkData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkData"
        app:layout_constraintTop_toBottomOf="@id/clearData"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="25dp" />

    <TextView
        android:id="@+id/languageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/checkData"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"/>

    <RadioGroup
        android:id="@+id/languageGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/languageLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"/>

        <RadioButton
            android:id="@+id/spanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spanish"
            android:layout_marginLeft="10dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/themeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/languageGroup"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"/>

    <RadioGroup
        android:id="@+id/themeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/themeLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/darkTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark"/>

        <RadioButton
            android:id="@+id/lightTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:layout_marginLeft="10dp"/>

        <RadioButton
            android:id="@+id/systemTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system"
            android:layout_marginLeft="10dp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/accessibility_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accessibility"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/themeGroup"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/text_size_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSize"
        app:layout_constraintTop_toBottomOf="@id/accessibility_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"/>

    <RadioGroup
        android:id="@+id/text_size_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_size_label"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="3dp">

        <RadioButton
            android:id="@+id/small_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small"/>

        <RadioButton
            android:id="@+id/medium_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:layout_marginLeft="10dp"/>

        <RadioButton
            android:id="@+id/large_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large"
            android:layout_marginLeft="10dp"/>

        <RadioButton
            android:id="@+id/extra_large_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extraLarge"
            android:layout_marginLeft="10dp"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
