<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="30sp"
        android:layout_marginTop="25dp"
        android:text="@string/loginTitle" />

    <TextView
        android:id="@+id/textMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editMail"
        android:layout_marginTop="95dp"
        android:layout_marginLeft="15dp"
        android:text="@string/gmail"/>

    <EditText
        android:id="@+id/editMail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toRightOf="@id/textMail"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        android:inputType="textEmailAddress"
        android:hint="@string/gmailLogin"/>

    <TextView
        android:id="@+id/textPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textMail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editMail"
        android:layout_marginTop="65dp"
        android:layout_marginRight="0dp"
        android:text="@string/pwd"/>

    <EditText
        android:id="@+id/editPwd"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textMail"
        app:layout_constraintLeft_toRightOf="@id/textPwd"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        android:inputType="textPassword"
        android:hint="@string/pwdLogin"/>

    <TextView
        android:id="@+id/confPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textPwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editConfPwd"
        android:layout_marginTop="75dp"
        android:layout_marginRight="0dp"
        android:text="@string/confPwd"/>

    <EditText
        android:id="@+id/editConfPwd"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editPwd"
        app:layout_constraintLeft_toRightOf="@id/confPwd"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        android:inputType="textPassword"
        android:hint="@string/conf"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textPwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="170dp"
        android:text="@string/signup"/>

</androidx.constraintlayout.widget.ConstraintLayout>