<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="150dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ChooseDifficultyActivity">

    <TextView
        android:id="@+id/Text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/chooseDiff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="10dp"/>


    <Button
        android:id="@+id/easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easyButton"
        app:layout_constraintTop_toBottomOf="@id/Text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/medium"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        app:layout_constraintTop_toBottomOf="@id/Text"
        app:layout_constraintLeft_toRightOf="@+id/easy"
        app:layout_constraintRight_toLeftOf="@+id/hard"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hardButton"
        app:layout_constraintTop_toBottomOf="@id/Text"
        app:layout_constraintLeft_toRightOf="@+id/medium"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>