<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="30sp"
        android:layout_marginTop="25dp"
        android:text="@string/loginTitle" />

    <TextView
        android:id="@+id/textMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/editMail"
        android:layout_marginTop="95dp"
        android:layout_marginRight="190dp"
        android:text="@string/gmail"/>

    <EditText
        android:id="@+id/editMail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="@id/textMail"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="35dp"
        android:inputType="textEmailAddress"
        android:hint="@string/gmailLogin"/>

    <TextView
        android:id="@+id/textPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textMail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/editMail"
        android:layout_marginTop="65dp"
        android:layout_marginRight="200dp"
        android:text="@string/pwd"/>

    <EditText
        android:id="@+id/editPwd"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textMail"
        app:layout_constraintLeft_toLeftOf="@id/textPwd"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="50dp"
        android:inputType="textPassword"
        android:hint="@string/pwdLogin"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textPwd"
        app:layout_constraintLeft_toLeftOf="parent"
        android:backgroundTint="@color/yellowBackground"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="170dp"
        android:text="@string/login"/>

    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintLeft_toLeftOf="parent"
        android:backgroundTint="@color/yellowBackground"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        android:text="@string/signup"/>

    <ImageButton
        android:id="@+id/github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp"
        app:layout_constraintRight_toLeftOf="@id/google"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:src="@drawable/githubicon"/>

    <ImageButton
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp"
        app:layout_constraintLeft_toRightOf="@id/github"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:src="@drawable/googleicon"/>

</androidx.constraintlayout.widget.ConstraintLayout>