<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="200dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EnterPortActivity">

    <TextView
        android:id="@+id/Text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/enterPort"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/code"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/portRange"
        android:inputType="number"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:maxLength="5"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/Text"/>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        app:layout_constraintTop_toBottomOf="@id/code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>